--- a/CodeForAndroid/AlipayTest/app/build.gradle
+++ b/CodeForAndroid/AlipayTest/app/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    compile (name: 'alipaySdk-15.6.5-20190718211148', ext: 'aar')
+    implementation (name: 'alipaySdk-15.6.5-20190718211148', ext: 'aar')
 }
