--- a/CodeForAndroid/ContactTest/app/src/main/AndroidManifest.xml
+++ b/CodeForAndroid/ContactTest/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <dist:module dist:instant="true" />
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,5 +21,8 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 </manifest>
